compiler/test/compilable/test22048.c
/*
TEST_OUTPUT:
---
---
*/

#ifdef _MSCVER
#include <windows.h>
#endif
